src/objects/Ideas_Projects__c.object
<CustomObject>
    <description>Projects are used to track ideas generated by the community, through to fruition. 

Each project is assigned a project team and this app is used to define the project, track it&apos;s stage, open issues, and estimated completion date.</description>
    <fields>
        <fullName>A_Note_from_the_Project_Team__c</fullName>
        <inlineHelpText>Update from the project team on the status of the project.</inlineHelpText>
        <label>Ideas in Action Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>Why do this project? 
What happens if we don’t do it? 
Why do it now? 
How critical will the impact of the project be?</inlineHelpText>
        <label>Business Justification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Plan__c</fullName>
        <inlineHelpText>How do you plan on communicating the status of this project to the community?</inlineHelpText>
        <label>Communication Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>What department is responsible for this project?</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Development &amp; Alliances</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Employee Services (HR)</fullName>
                </value>
                <value>
                    <fullName>Facilities &amp; Real Estate</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Global Services</fullName>
                </value>
                <value>
                    <fullName>Information Technology (IT)</fullName>
                </value>
                <value>
                    <fullName>Internal Salesforce App</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <inlineHelpText>Note that changes to the estimated completion date are are tracked in the field history tracking down below, along with the project status, owner, and estimated completion date.</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <inlineHelpText>What group is most directly responsible for this project?</inlineHelpText>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>Enterprise Sales</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Employee Services</fullName>
                </value>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>Demand Generation</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Premiere Support</fullName>
                </value>
                <value>
                    <fullName>Implementation Services</fullName>
                </value>
                <value>
                    <fullName>Standard Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea</label>
        <referenceTo>Idea</referenceTo>
        <relationshipName>R00N6A00000C6fvoUAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <inlineHelpText>What is the level of effort to complete this project? Is it a quick win or a resource intensive project?</inlineHelpText>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note_4__c</fullName>
        <label>Note 4</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_5__c</fullName>
        <label>Note 5</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <label>Note 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Note 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <label>Note 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Score_3__c  +  Score_4__c  +  S1__c  +  Score_2__c  +  Score_5__c</formula>
        <inlineHelpText>Formula field based on the project checklist below.</inlineHelpText>
        <label>Percent Complete (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <formula>IMAGE( CASE( Priority__c,  &quot;Low&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;High&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;/s.gif&quot;), &quot;priority flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Priority ~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>How high of a priority is it for the organization and the group?</inlineHelpText>
        <label>Project Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Age__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <inlineHelpText>Calculates the number of days since this project was created.</inlineHelpText>
        <label>Project Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Provide a short description of the project to define the goals, what is in scope, and what is out of scope.</inlineHelpText>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Milestones__c</fullName>
        <inlineHelpText>What are some of the key milestones for this project? 

Milestones can also be cataloged and tracked in the related list below.</inlineHelpText>
        <label>Milestones</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluating</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ready to Present Initial Plan for Approval</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Tabeled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status_Indicator__c</fullName>
        <formula>IMAGE( CASE(  Project_Status__c , &quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status ~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <formula>IF( checkbox1__c , 20, 0)</formula>
        <label>Score 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_2__c</fullName>
        <formula>IF(  checkbox2__c , 20, 0)</formula>
        <label>Score 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_3__c</fullName>
        <formula>IF(  checkbox3__c  , 20, 0 )</formula>
        <label>Score 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_4__c</fullName>
        <formula>IF(   checkbox4__c  , 20, 0)</formula>
        <label>Score 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success_Factors__c</fullName>
        <inlineHelpText>Briefly describe any issues that will need to be addressed prior to or during the project. Are there any risks, dependencies, or constraints to be aware of? 

Project Issues can also be cataloged and  tracked in the related list below.</inlineHelpText>
        <label>Success Factors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <label>Type of Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Customer Facing</fullName>
                </value>
                <value>
                    <fullName>Partner Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All the fields in the project object have been filled out and the project is ready to be presented.</inlineHelpText>
        <label>Initial Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The project has been presented and resources have been approved.</inlineHelpText>
        <label>Resourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A detailed project plan has been written and everything is ready to begin work.</inlineHelpText>
        <label>Plan Defined</label>
        <type>Checkbox</type>
    </fields>
    <label>Idea in Action</label>
    <listViews>
        <fullName>ActiveProjectsSuggestedbyCustomers</fullName>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Evaluating,Ready to Present Initial Plan for Approval,Scheduled,In Progress</value>
        </filters>
        <filters>
            <field>Type_of_Project__c</field>
            <operation>equals</operation>
            <value>Customer Facing</value>
        </filters>
        <label>Active Projects Suggested by Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllProjects</fullName>
        <columns>NAME</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ImplementedProjects</fullName>
        <columns>NAME</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>A_Note_from_the_Project_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Stage__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Type_of_Project__c</field>
            <operation>equals</operation>
            <value>Customer Facing</value>
        </filters>
        <label>Implemented Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Idea in Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas in Action</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>